# wikipedia-article-transform

./: Cargo.toml  LICENSE  README.md  render.yaml  test.html
.github/workflows/: ci.yml  publish-python.yml  publish-rust.yml
examples/: Oxygen.json  Oxygen.md  Oxygen.text
python/: Cargo.toml  README.md  pyproject.toml
python/src/: lib.rs
python/wikipedia_article_transform/: __init__.py  cli.py  client.py
skills/wikipedia-article-transform/: SKILL.md
skills/wikipedia-article-transform/references/: output-formats.md
src/: formatters.rs  lib.rs  main.rs  web.rs
