[package]
name = "wikipedia-article-transform-python"
version = "0.3.0"
edition = "2024"
license = "MIT"
publish = false

[lib]
name = "wikipedia_article_transform_python"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["abi3-py39", "extension-module"] }
wikipedia-article-transform = { path = ".." }
